migrate to rem as much as reasonable

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             text-wrap: pretty;
             overflow-wrap: break-word;
             transition: background-color 0.3s, color 0.3s;
-            font-size: 1.4em;
+            font-size: 1.4rem;
         }
 
         .content-wrapper {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 24px;
+            margin: 1.5rem;
         }
 
         .header-banner {
@@ -64,9 +64,9 @@
         }
 
         nav {
-            padding: 10px;
+            padding: 0.6rem;
             border: 2px solid var(--border-color);
-            margin-top: 24px;
+            margin-top: 1.5rem;
             width: 100%;
             max-width: 100rem;
         }
@@ -74,19 +74,19 @@
         .sushi-title {
             font-weight: bold;
             color: var(--text-color);
-            font-size: 1.2em;
+            font-size: 1.6rem;
         }
 
         .sushi-title .big-emoji {
-            font-size: 1.3em;
+            font-size: 2rem;
             vertical-align: middle;
         }
 
         nav a {
             color: var(--text-color);
             text-decoration: none;
-            margin-right: 20px;
-            font-size: 1.2em;
+            margin-right: 1.5rem;
+            font-size: 1.6rem;
         }
 
         nav a:hover {
@@ -98,20 +98,20 @@
             background: var(--text-color);
             color: var(--bg-color);
             border: none;
-            padding: 5px 10px;
+            padding: 0.4rem 0.8rem;
             cursor: pointer;
             font-family: 'VT323', monospace;
         }
 
         /* Updated social links styles to match content box */
         .social-links {
-            margin-top: 24px;
+            margin-top: 1.5rem;
             width: 100%;
             max-width: 100rem;
             display: flex;
-            gap: 15px;
+            gap: 1.5rem;
             align-items: center;
-            padding: 15px;
+            padding: 1rem;
             border: 2px solid var(--border-color);
         }
 
@@ -119,7 +119,7 @@
             color: var(--text-color);
             text-decoration: none;
             transition: color 0.3s;
-            height: 24px;
+            height: 1.5rem;
         }
 
         .social-links a:hover {
@@ -127,8 +127,8 @@
         }
 
         .social-links svg {
-            width: 24px;
-            height: 24px;
+            width: 1.5rem;
+            height: 1.5rem;
             stroke: currentColor;
             color: var(--text-color);
         }
@@ -139,7 +139,7 @@
 
         .blurb {
             margin-bottom: 30px;
-            padding: 15px;
+            padding: 1rem;
             border: 1px solid var(--border-color);
         }
 
@@ -182,10 +182,10 @@
         }
 
         .content {
-            margin-top: 24px;
+            margin-top: 1.5rem;
             width: 100%;
             max-width: 100rem;
-            padding: 15px;
+            padding: 1rem;
             border: 2px solid var(--border-color);
             word-wrap: break-word;
             overflow-wrap: break-word;
@@ -210,8 +210,8 @@
         }
 
         .content ul{
-            margin-left: 2em;
-            margin-bottom: 1em;
+            margin-left: 2.5rem;
+            margin-bottom: 1.5rem;
         }
 
         .content a {
@@ -220,7 +220,7 @@
         }
 
         .content p {
-            margin-bottom: 1em;
+            margin-bottom: 1rem;
         }
 
         .content pre {
@@ -238,9 +238,8 @@
 
         .error-message {
             color: #ff0000;
-            padding: 20px;
+            padding: 1.5rem;
             border: 2px solid #ff0000;
-            margin: 20px 0;
         }
     </style>
 </head>
