--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </a>
             <a href="#" data-page="home">root</a>
             <a href="#" data-page="about">whoami</a>
-            <a href="#" data-page="resource dump">resources</a>
+            <a href="#" data-page="resources">resources</a>
             <a href="#" data-page="blurbs">blurbs</a>
         </nav>
 
