--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 </head>
 <body>
     <div class="header-banner">
-        <img src="media/lilies.gif" alt="Header Banner">
+        <img src="./media/lilies.gif" alt="Header Banner">
     </div>
     <div class="content-wrapper">
         <nav>
